@@ -52,8 +52,9 @@ export(getManifest, getProbeInfo, getManifestInfo,
        RGChannelSet, RGChannelSetExtended,
        MethylSet, RatioSet,
        GenomicMethylSet, GenomicRatioSet,
-       read.450k, read.450k.sheet, read.450k.exp, read.450k.GEO,
+       read.450k, read.450k.sheet, read.450k.exp, getGenomicRatioSetFromGEO,
        makeGenomicRatioSetFromMatrix,
+       read.GEORawFile,
        logit2, ilogit2,
        dmpFinder, mdsPlot, plotCpg, plotBetasByType,
        detectionP, qcReport, controlStripPlot, densityBeanPlot, densityPlot,
